--- a/healing.html
+++ b/healing.html
@@ -39,7 +39,7 @@
                 <li><a href="/about"><span>О нас</span></a></li>
                 <li><a href="/#tabs"><span>Разделы</span></a></li>
                 <li><a href="/#reviews"><span>Отзывы</span></a></li>
-                <li><a href="/#command"><span>Команда</span></a></li>
+                <li><a href="/#team"><span>Команда</span></a></li>
                 <li><a href="/#contacts"><span>Контакты</span></a></li>
             </ul>
             <!--            <a href="#" class="btn-default btn btn-sm navbar-btn navbar-right"><span>Зарегистрироваться</span></a>-->
@@ -193,7 +193,7 @@
                 </div>
                 <div class="col-md-6 col-md-pull-5">
                     <div class="padding-box light" style="background-color:#fff">
-                        <h4 class="mb-25">Оставьте вашу заявку на консультацию</h4>
+                        <h4 class="mb-25">Оставьте вашу заявку на консультацию и молитву за исцеление</h4>
                         <form action="./scripts/request.php" class="contact_form" novalidate="novalidate"
                               id="step-ltr-form-img-text-half-end-form">
                             <div class="form-group">
@@ -234,7 +234,7 @@
                                     <a href="/#reviews">Отзывы</a>
                                 </li>
                                 <li>
-                                    <a href="/#command">Команда</a>
+                                    <a href="/#team">Команда</a>
                                 </li>
                                 <li>
                                     <a href="/#contacts">Контакты</a>
@@ -330,7 +330,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 class="mb-30">Молитва за своё исцеление</h2>
-                    <p class="mb-30 fs-125">Введите свои данные и мы вышлем вам молитву за исцеление, а так-же вы сможете оставить заявку в молитвенную группу</p>
+                    <p class="mb-30 fs-125">Введите свои данные и мы вышлем вам молитву за исцеление, а так-же вы сможете записаться на молитвенную поддержку</p>
                     <form action="./scripts/request.php" class="contact_form mb-0" id="popup-center-form-form"
                           novalidate="novalidate">
                         <div class="form-group">
@@ -345,7 +345,7 @@
                         <button type="submit" data-loading-text="•••" data-complete-text="Completed!"
                                 data-reset-text="Try again later..." class="btn btn-primary btn-block">
                             <i class="icon-paper-plane icon-position-left icon-size-m"></i>
-                            <span>Вышлите молитву</span>
+                            <span>Получить молитву</span>
                         </button>
                     </form>
                 </div>
