--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="/about"><span>О нас</span></a></li>
                 <li><a href="/#tabs"><span>Разделы</span></a></li>
                 <li><a href="/#reviews"><span>Отзывы</span></a></li>
-                <li><a href="/#command"><span>Команда</span></a></li>
+                <li><a href="/#team"><span>Команда</span></a></li>
                 <li><a href="/#contacts"><span>Контакты</span></a></li>
             </ul>
             <!--            <a href="#" class="btn-default btn btn-sm navbar-btn navbar-right"><span>Зарегистрироваться</span></a>-->
@@ -231,7 +231,7 @@
         </div>
         <div class="bg"></div>
     </section>
-    <section id="command" class="pt-75 pb-75 dark text-center">
+    <section id="team" class="pt-75 pb-75 dark text-center">
         <div class="container">
             <h2>Команда - это ядро церкви</h2>
             <h4>Стать частью команды значит отправиться в великое путешествие. Это действительно большая радость и
@@ -595,7 +595,7 @@
                                     <a href="/#reviews">Отзывы</a>
                                 </li>
                                 <li>
-                                    <a href="/#command">Команда</a>
+                                    <a href="/#team">Команда</a>
                                 </li>
                                 <li>
                                     <a href="/#contacts">Контакты</a>
