--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Социальная помощь - Церковь г.Барнаула</title>
+    <title>О нас - Церковь г.Барнаула</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -31,8 +31,8 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"><span
                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
             <div class="navbar-brand"><a href="/"><img src="images/logo025x.png"
-                                                                 srcset="images/logo05x.png 2x"
-                                                                 alt="NGBarnaul logo" class=""></a></div>
+                                                       srcset="images/logo05x.png 2x"
+                                                       alt="NGBarnaul logo" class=""></a></div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-center">
@@ -48,91 +48,46 @@
     <div class="nav-bg dark"></div>
 </nav>
 <div id="wrap">
-    <section id="gallery-carousel-3" class="pt-75 pb-50 dark text-center">
+    <section id="text-1col-center-3" class="dark pt-100 pb-50 text-center">
         <div class="container">
-            <h2>Социальная помощь!</h2>
-        </div>
-    </section>
-    <section id="step-rtl-text-btn-img-half-start" class="pt-75 pb-150 light">
-        <div class="container">
-            <div class="row flex-md-vmiddle">
-                <div class="col-md-6 col-md-push-6 text-center">
-                    <img src="images/soc-1.jpg" srcset="images/soc-1-2x.jpg 2x" alt="illustration"
-                         class="screen">
-                </div>
-                <div class="col-md-6 col-md-pull-6" style="z-index: 10;">
-                    <h2 class="mb-30" style="overflow: visible;">Вам знакомы эти проблемы?<br></h2>
-                    <ul class="tabs-ul">
-                        <li>Не хватает продуктов, большая семья</li>
-                        <li>Временная  сложная жизненная ситуация</li>
-                        <li>Низкая зарплата</li>
-                        <li>Вам не удобно просить, но семья в нужде</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="step-line-rtc step-line-half step-line-start"></div>
-        <div class="step-line-ctl step-line-half"></div>
-        <div class="bg"></div>
-    </section>
-    <section id="step-ltr-img-text-btn-half--0" class="pt-75 pb-150 light">
-        <div class="container">
-            <div class="row flex-md-vmiddle">
-                <div class="col-md-6 text-center">
-                    <img src="images/soc-2.jpg" srcset="images/soc-2-2x.jpg 2x" alt="illustration"
-                         class="screen">
-                </div>
-                <div class="col-md-6">
-                    <h2 class="mb-30">Как вы можете получить помощь</h2>
-                    <ul class="tabs-ul">
-                        <li>Прийти к нам и наши специалисты помогут вам в решении этого вопроса</li>
-                        <li>Оставьте заявку на сайте</li>
-                        <li>Один раз в месяц у нас проходит открытая акция по регистрации</li>
-                        <li>Вы можете получить один продуктовый пакет на человека и Одежду и Обувь</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="step-line-ltc step-line-half"></div>
-        <div class="step-line-ctr step-line-half"></div>
-        <div class="bg"></div>
-    </section>
-    <section id="step-ltr-form-img-text-half-end" class="pt-75 pb-150 light">
-        <div class="container">
-            <div class="row flex-md-vmiddle">
-                <div class="col-md-5 col-md-push-7">
-                    <img src="images/illustration-5.png" srcset="images/illustration-5@2x.png 2x" alt="illustration"
-                         class="screen mb-50">
-                    <!--                    <h2 class="mb-50">5. Drop us a line</h2>-->
-                    <!--                    <p>The given template is armed with the number of settings, so you can easily adapt it according to-->
-                    <!--                        you requirements. Plenty of additional elements guarantee that you will get the project you-->
-                    <!--                        exactly wanted in the end, saving you time and money.-->
-                    <!--                    </p>-->
-                </div>
-                <div class="col-md-6 col-md-pull-5">
-                    <div class="padding-box light" style="background-color:#fff">
-                        <h4 class="mb-25">Оставьте свои данные и мы свяжемся с вами</h4>
-                        <form action="./scripts/request.php" class="contact_form" novalidate="novalidate"
-                              id="step-ltr-form-img-text-half-end-form">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Ваше имя" name="NAME">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Ваш емайл" name="EMAIL">
-                            </div>
-                            <div class="form-group">
-                                <input type="tel" class="form-control" placeholder="Ваш телефон" name="TEL">
-                            </div>
-                            <button type="submit" data-loading-text="•••" data-complete-text="Completed!"
-                                    data-reset-text="Try again later..." class="btn btn-primary btn-block"><i
-                                    class="icon-paper-plane icon-position-left icon-size-m"></i><span>Оставить данные</span>
-                            </button>
-                        </form>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h2 class="mb-50"><strong>О нас</strong></h2>
+                    <div class="mb-50 text-left indent">
+                        <p>Наша церковь является членом Российского Объединённого союза Христиан Веры
+                            Евангельской (пятидесятников).</p>
+                        <p>Мы признаем непреложный авторитет Библии, Канонических книг Ветхого и Нового Заветов.</p>
+                        <p>Мы принимаем за основу нашего вероучения Никео-Цареградский Символ Веры (381 г. н. э),
+                            который уже почти 17 веков является объединяющим фактором всех христианских конфессий.</p>
                     </div>
+<!--                    <a href="/#team" class="btn btn-default btn-lg"><span>Наша команда</span><i class="icon-arrow-right icon-position-right"></i></a>-->
                 </div>
             </div>
         </div>
-        <div class="step-line-rtc step-line-half step-line-end"></div>
+        <div class="bg"></div>
+    </section>
+    <section id="spec-inner-page-2" class="dark pt-50">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-left">
+                    <h2 class="text-center"><strong>Никео-Цареградский Символ Веры</strong></h2>
+                    <p class="mb-50 indent">Верую во единого Бога Отца Вседержителя, Творца неба и земли, всего видимого и невидимого.
+И во единого Господа Иисуса Христа, Сына Божия, единородного, рождённого от Отца прежде всех веков, Света от Света, Бога истинного от Бога истинного, рождённого, не сотворённого, одного существа со Отцом, через Которого всё сотворено;
+для нас людей и для нашего спасения сошедшего с небес, принявшего плоть от Духа Святого и Марии Девы и сделавшегося человеком, распятого за нас при Понтии Пилате, страдавшего и погребённого, воскресшего в третий день согласно с Писаниями (пророческими), восшедшего на небеса и сидящего одесную Отца, и снова грядущего со славою судить живых и мёртвых, Царству Его не будет конца.
+И в Святого Духа, Господа, дающего жизнь, исходящего от Отца, поклоняемого и прославляемого равночестно с Отцем и Сыном, говорившего чрез пророков.
+И во единую, Святую, Вселенскую и Апостольскую Церковь. Исповедую единое крещение во оставление грехов.
+Ожидаю воскресения мёртвых и жизнь будущую. Аминь.</p>
+
+                    <h2 class="text-center"><strong>О церкви</strong></h2>
+                    <p class="indent">Церковь, являясь неотъемлемой частью социальных институтов нашего общества, призвана выполнять созидательную роль, служа людям и государству. Социальная концепция церкви предполагает основные принципы, которыми руководствуются верующие, служа людям в нашей стране.</p>
+                			<div class="video-iframe embed-responsive embed-responsive-16by9 mb-50">
+                                <iframe class="embed-responsive-item" width="1280" height="720" src="https://www.youtube.com/embed/2agkB7m7EKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--                    			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2agkB7m7EKE?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen=""></iframe>-->
+                			</div>
+
+                </div>
+            </div>
+        </div>
         <div class="bg"></div>
     </section>
     <footer id="footer-list-form" class="dark pt-100 pb-100">
@@ -213,10 +168,12 @@
                 <div class="col-md-6 text-md-right">
                     <ul class="social-list">
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i class="icon-instagram icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i
+                                    class="icon-instagram icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i class="icon-youtube icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i
+                                    class="icon-youtube icon-size-m"></i></a>
                         </li>
                         <li>
                             <a target="_blank" href="https://vk.com/ngbarnaul"><i class="icon-vk icon-size-m"></i></a>
@@ -225,7 +182,8 @@
                             <a target="_blank" href="https://ok.ru/ngbrn"><i class="icon-odnoklassniki icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i class="icon-facebook icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i
+                                    class="icon-facebook icon-size-m"></i></a>
                         </li>
                     </ul>
                 </div>
