--- a/psycholog.html
+++ b/psycholog.html
@@ -39,7 +39,7 @@
                 <li><a href="/about"><span>О нас</span></a></li>
                 <li><a href="/#tabs"><span>Разделы</span></a></li>
                 <li><a href="/#reviews"><span>Отзывы</span></a></li>
-                <li><a href="/#command"><span>Команда</span></a></li>
+                <li><a href="/#team"><span>Команда</span></a></li>
                 <li><a href="/#contacts"><span>Контакты</span></a></li>
             </ul>
             <!--            <a href="#" class="btn-default btn btn-sm navbar-btn navbar-right"><span>Зарегистрироваться</span></a>-->
@@ -203,7 +203,7 @@
                                     <a href="/#reviews">Отзывы</a>
                                 </li>
                                 <li>
-                                    <a href="/#command">Команда</a>
+                                    <a href="/#team">Команда</a>
                                 </li>
                                 <li>
                                     <a href="/#contacts">Контакты</a>
