--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                         <p>Мы принимаем за основу нашего вероучения Никео-Цареградский Символ Веры (381 г. н. э),
                             который уже почти 17 веков является объединяющим фактором всех христианских конфессий.</p>
                     </div>
-<!--                    <a href="/#team" class="btn btn-default btn-lg"><span>Наша команда</span><i class="icon-arrow-right icon-position-right"></i></a>-->
+                    <!--                    <a href="/#team" class="btn btn-default btn-lg"><span>Наша команда</span><i class="icon-arrow-right icon-position-right"></i></a>-->
                 </div>
             </div>
         </div>
@@ -71,20 +71,39 @@
             <div class="row">
                 <div class="col-md-12 text-left">
                     <h2 class="text-center"><strong>Никео-Цареградский Символ Веры</strong></h2>
-                    <p class="mb-50 indent">Верую во единого Бога Отца Вседержителя, Творца неба и земли, всего видимого и невидимого.
-И во единого Господа Иисуса Христа, Сына Божия, единородного, рождённого от Отца прежде всех веков, Света от Света, Бога истинного от Бога истинного, рождённого, не сотворённого, одного существа со Отцом, через Которого всё сотворено;
-для нас людей и для нашего спасения сошедшего с небес, принявшего плоть от Духа Святого и Марии Девы и сделавшегося человеком, распятого за нас при Понтии Пилате, страдавшего и погребённого, воскресшего в третий день согласно с Писаниями (пророческими), восшедшего на небеса и сидящего одесную Отца, и снова грядущего со славою судить живых и мёртвых, Царству Его не будет конца.
-И в Святого Духа, Господа, дающего жизнь, исходящего от Отца, поклоняемого и прославляемого равночестно с Отцем и Сыном, говорившего чрез пророков.
-И во единую, Святую, Вселенскую и Апостольскую Церковь. Исповедую единое крещение во оставление грехов.
-Ожидаю воскресения мёртвых и жизнь будущую. Аминь.</p>
+                    <p class="mb-50 indent">Верую во единого Бога Отца Вседержителя, Творца неба и земли, всего видимого
+                        и невидимого.
+                        И во единого Господа Иисуса Христа, Сына Божия, единородного, рождённого от Отца прежде всех
+                        веков, Света от Света, Бога истинного от Бога истинного, рождённого, не сотворённого, одного
+                        существа со Отцом, через Которого всё сотворено;
+                        для нас людей и для нашего спасения сошедшего с небес, принявшего плоть от Духа Святого и Марии
+                        Девы и сделавшегося человеком, распятого за нас при Понтии Пилате, страдавшего и погребённого,
+                        воскресшего в третий день согласно с Писаниями (пророческими), восшедшего на небеса и сидящего
+                        одесную Отца, и снова грядущего со славою судить живых и мёртвых, Царству Его не будет конца.
+                        И в Святого Духа, Господа, дающего жизнь, исходящего от Отца, поклоняемого и прославляемого
+                        равночестно с Отцем и Сыном, говорившего чрез пророков.
+                        И во единую, Святую, Вселенскую и Апостольскую Церковь. Исповедую единое крещение во оставление
+                        грехов.
+                        Ожидаю воскресения мёртвых и жизнь будущую. Аминь.</p>
 
                     <h2 class="text-center"><strong>О церкви</strong></h2>
-                    <p class="indent">Церковь, являясь неотъемлемой частью социальных институтов нашего общества, призвана выполнять созидательную роль, служа людям и государству. Социальная концепция церкви предполагает основные принципы, которыми руководствуются верующие, служа людям в нашей стране.</p>
-                			<div class="video-iframe embed-responsive embed-responsive-16by9 mb-50">
-                                <iframe class="embed-responsive-item" width="1280" height="720" src="https://www.youtube.com/embed/2agkB7m7EKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<!--                    			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2agkB7m7EKE?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen=""></iframe>-->
-                			</div>
-
+                    <p class="indent">Церковь, являясь неотъемлемой частью социальных институтов нашего общества,
+                        призвана выполнять созидательную роль, служа людям и государству. Социальная концепция церкви
+                        предполагает основные принципы, которыми руководствуются верующие, служа людям в нашей
+                        стране.</p>
+                    <div class="video-iframe embed-responsive embed-responsive-16by9 mb-50">
+                        <iframe class="embed-responsive-item" width="1280" height="720"
+                                src="https://www.youtube.com/embed/2agkB7m7EKE" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        <!--                    			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2agkB7m7EKE?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen=""></iframe>-->
+                    </div>
+<!--                    <div class="video-iframe embed-responsive embed-responsive-16by9 mb-50">-->
+<!--                        <iframe class="embed-responsive-item" width="1280" height="720"-->
+<!--                                src="https://www.youtube.com/embed/gXOyRRAQimw" frameborder="0"-->
+<!--                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
+<!--                                allowfullscreen></iframe>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
