--- a/psycholog.html
+++ b/psycholog.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row flex-md-vmiddle">
                 <div class="col-md-6 col-md-push-6 text-center">
-                    <img src="images/heal-1.png" srcset="images/heal-1-2x.png 2x" alt="illustration"
+                    <img src="images/psy-1.jpg" srcset="images/psy-1-2x.jpg 2x" alt="illustration"
                          class="screen">
                 </div>
                 <div class="col-md-6 col-md-pull-6" style="z-index: 10;">
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row flex-md-vmiddle">
                 <div class="col-md-6 text-center">
-                    <img src="images/heal-2.png" srcset="images/heal-2-2x.png 2x" alt="illustration"
+                    <img src="images/psy-2.jpg" srcset="images/psy-2-2x.jpg 2x" alt="illustration"
                          class="screen">
                 </div>
                 <div class="col-md-6">
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="row flex-md-vmiddle">
                 <div class="col-md-6 col-md-push-6 text-center">
-                    <img src="images/heal-3.png" srcset="images/heal-3-2x.png 2x" alt="illustration"
+                    <img src="images/psy-3.jpg" srcset="images/psy-3-2x.jpg 2x" alt="illustration"
                          class="screen">
                 </div>
                 <div class="col-md-6 col-md-pull-6">
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="row flex-md-vmiddle">
                 <div class="col-md-6 text-center">
-                    <img src="images/heal-4.png" srcset="images/heal-4-2x.png 2x" alt="illustration"
+                    <img src="images/psy-4.jpg" srcset="images/psy-4-2x.jpg 2x" alt="illustration"
                          class="screen">
                 </div>
                 <div class="col-md-6">
@@ -299,7 +299,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 class="mb-30">Получить видеовыпуск<br>«Стоп развод»</h2>
-                    <p class="mb-30 fs-125">Введите свои данные и мы вышлем вам видеовыпуск авторской передачи Артёма Торопчина «Стоп развод»</p>
+                    <p class="mb-30 fs-125">Введите свои данные и мы вышлем вам видеовыпуск авторской передачи Артёма Торопчина «Стоп развод». Это бесплатно!</p>
                     <form action="./scripts/request.php" class="contact_form mb-0" id="popup-center-form-form"
                           novalidate="novalidate">
                         <div class="form-group">
