--- a/finance.html
+++ b/finance.html
@@ -89,7 +89,7 @@
                         <li>Встреча с финансовым консультантом</li>
                         <li>Диагностика вашей проблемы</li>
                         <li>Находим решение</li>
-                        <li>Увеличиваем ваши доходу</li>
+                        <li>Увеличиваем ваши доходы</li>
                         <li>Мгновенно решаем вашу сложность от ее уровня</li>
                     </ul>
                 </div>
