logo-pastor, psy confidential

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"><span
                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
             <div class="navbar-brand"><a href="/"><img src="images/logo025x.png"
-                                                                 srcset="images/logo05x.png 2x"
-                                                                 alt="NGBarnaul logo" class=""></a></div>
+                                                       srcset="images/logo05x.png 2x"
+                                                       alt="NGBarnaul logo" class=""></a></div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-center">
@@ -51,8 +51,8 @@
     <section id="header-center-carousel-single" class="pt-150 pb-150 -dark text-center">
         <div class="carousel-single-nav owl-drag">
             <div class="item container text-center text-info">
-                <!--                <img src="images/logo1x.png" srcset="images/logo2x.png 2x" alt="" class="screen mb-50 mt-50">-->
-                <h1 class="mb-50"><strong>Добро пожаловать</strong><br>в Евангельскую Церковь<br>города Барнаула</h1>
+                <img src="images/logo-pastor.webp" srcset="images/logo-pastor-2x.webp 2x" alt="" class="screen">
+                <h2 class="mb-50"><strong>Добро пожаловать</strong><br>в Евангельскую Церковь<br>города Барнаула</h2>
                 <p class="mb-50">Мы очень рады, что вы зашли к нам на сайт.
                     Нам бы хотелось, чтобы вы присоединились к нашей церкви, как в реальности, так и онлайн.
                 </p>
@@ -135,7 +135,8 @@
                         </div>
                         <div class="card-img-overlay-bottom">
                             <p class="u-b">Один шаг и Ваша семья накормлена и одета!</p>
-                            <a class="btn btn-primary btn-xs" href="/social"><span class="h4 u-b">Узнать больше</span></a>
+                            <a class="btn btn-primary btn-xs" href="/social"><span
+                                    class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +155,8 @@
                         </div>
                         <div class="card-img-overlay-bottom">
                             <p class="u-b">Десятки семей решили свои проблемы!</p>
-                            <a class="btn btn-primary btn-xs" href="/psycholog"><span class="h4 u-b">Узнать больше</span></a>
+                            <a class="btn btn-primary btn-xs" href="/psycholog"><span
+                                    class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
@@ -206,12 +208,12 @@
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                     </div>
-<!--                    <div class="item video-iframe embed-responsive embed-responsive-16by9">-->
-<!--                        <iframe class="embed-responsive-item" width="640" height="360"-->
-<!--                                src="https://www.youtube.com/embed/uBIV_8nt3lg" frameborder="0"-->
-<!--                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
-<!--                                allowfullscreen></iframe>-->
-<!--                    </div>-->
+                    <!--                    <div class="item video-iframe embed-responsive embed-responsive-16by9">-->
+                    <!--                        <iframe class="embed-responsive-item" width="640" height="360"-->
+                    <!--                                src="https://www.youtube.com/embed/uBIV_8nt3lg" frameborder="0"-->
+                    <!--                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
+                    <!--                                allowfullscreen></iframe>-->
+                    <!--                    </div>-->
                 </div>
                 <div class="col-md-4">
                     <div class="item video-iframe embed-responsive embed-responsive-16by9">
@@ -220,12 +222,12 @@
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                     </div>
-<!--                    <div class="item video-iframe embed-responsive embed-responsive-16by9">-->
-<!--                        <iframe class="embed-responsive-item" width="640" height="360"-->
-<!--                                src="https://www.youtube.com/embed/9dbVY2At3Ng" frameborder="0"-->
-<!--                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
-<!--                                allowfullscreen></iframe>-->
-<!--                    </div>-->
+                    <!--                    <div class="item video-iframe embed-responsive embed-responsive-16by9">-->
+                    <!--                        <iframe class="embed-responsive-item" width="640" height="360"-->
+                    <!--                                src="https://www.youtube.com/embed/9dbVY2At3Ng" frameborder="0"-->
+                    <!--                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"-->
+                    <!--                                allowfullscreen></iframe>-->
+                    <!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -472,48 +474,48 @@
                                 <a href="tel:+79133688393">8 (913) 368-83-93 Евгения</a>
                             </div>
                         </div>
-<!--                        <div class="card item gallery-style-4">-->
-<!--                            <div class="card-block-hover">-->
-<!--                                <div class="card-img-overlay-center card-img-overlay-bg">-->
-<!--                                    <ul class="social-list">-->
-<!--                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>-->
-<!--                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>-->
-<!--                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>-->
-<!--                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                                <img class="img-circle" src="images/s-evg_sel.jpg" srcset="images/s-evg_sel.jpg 2x"-->
-<!--                                     alt="team">-->
-<!--                            </div>-->
-<!--                            <div class="card-block">-->
-<!--                                <h3 class="mt-20 mb-0"><strong>Евгения Селиванова</strong></h3>-->
-<!--                                <h4>Организатор досуга церкви</h4>-->
-<!--                                <p>Ее способности позволяют организовывать невероятные мероприятия которые заряжают-->
-<!--                                    людей на большие победы и подъем позитивных эмоций.</p>-->
-<!--                                <a href="tel:+79132550523">8 (913) 255-05-23 Евгения</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="card item gallery-style-4">-->
-<!--                            <div class="card-block-hover">-->
-<!--                                <div class="card-img-overlay-center card-img-overlay-bg">-->
-<!--                                    <ul class="social-list">-->
-<!--                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>-->
-<!--                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>-->
-<!--                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>-->
-<!--                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                                <img class="img-circle" src="images/s-aleks.jpeg" srcset="images/s-aleks.jpeg 2x"-->
-<!--                                     alt="team">-->
-<!--                            </div>-->
-<!--                            <div class="card-block">-->
-<!--                                <h3 class="mt-20 mb-0"><strong>Алексей Спирков</strong></h3>-->
-<!--                                <h4>Руководитель социального проекта «День милосердия»</h4>-->
-<!--                                <p>Не оставит не одного человека без продуктов и одежды. Доброй души чуткого внимания к-->
-<!--                                    людям служитель.</p>-->
-<!--                                <a href="tel:+79835560830">8 (983) 556-08-30 Алексей</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <!--                        <div class="card item gallery-style-4">-->
+                        <!--                            <div class="card-block-hover">-->
+                        <!--                                <div class="card-img-overlay-center card-img-overlay-bg">-->
+                        <!--                                    <ul class="social-list">-->
+                        <!--                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>-->
+                        <!--                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>-->
+                        <!--                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>-->
+                        <!--                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>-->
+                        <!--                                    </ul>-->
+                        <!--                                </div>-->
+                        <!--                                <img class="img-circle" src="images/s-evg_sel.jpg" srcset="images/s-evg_sel.jpg 2x"-->
+                        <!--                                     alt="team">-->
+                        <!--                            </div>-->
+                        <!--                            <div class="card-block">-->
+                        <!--                                <h3 class="mt-20 mb-0"><strong>Евгения Селиванова</strong></h3>-->
+                        <!--                                <h4>Организатор досуга церкви</h4>-->
+                        <!--                                <p>Ее способности позволяют организовывать невероятные мероприятия которые заряжают-->
+                        <!--                                    людей на большие победы и подъем позитивных эмоций.</p>-->
+                        <!--                                <a href="tel:+79132550523">8 (913) 255-05-23 Евгения</a>-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
+                        <!--                        <div class="card item gallery-style-4">-->
+                        <!--                            <div class="card-block-hover">-->
+                        <!--                                <div class="card-img-overlay-center card-img-overlay-bg">-->
+                        <!--                                    <ul class="social-list">-->
+                        <!--                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>-->
+                        <!--                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>-->
+                        <!--                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>-->
+                        <!--                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>-->
+                        <!--                                    </ul>-->
+                        <!--                                </div>-->
+                        <!--                                <img class="img-circle" src="images/s-aleks.jpeg" srcset="images/s-aleks.jpeg 2x"-->
+                        <!--                                     alt="team">-->
+                        <!--                            </div>-->
+                        <!--                            <div class="card-block">-->
+                        <!--                                <h3 class="mt-20 mb-0"><strong>Алексей Спирков</strong></h3>-->
+                        <!--                                <h4>Руководитель социального проекта «День милосердия»</h4>-->
+                        <!--                                <p>Не оставит не одного человека без продуктов и одежды. Доброй души чуткого внимания к-->
+                        <!--                                    людям служитель.</p>-->
+                        <!--                                <a href="tel:+79835560830">8 (983) 556-08-30 Алексей</a>-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
                         <div class="card item gallery-style-4">
                             <div class="card-block-hover">
                                 <div class="card-img-overlay-center card-img-overlay-bg">
@@ -658,10 +660,12 @@
                 <div class="col-md-6 text-md-right">
                     <ul class="social-list">
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i class="icon-instagram icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i
+                                    class="icon-instagram icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i class="icon-youtube icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i
+                                    class="icon-youtube icon-size-m"></i></a>
                         </li>
                         <li>
                             <a target="_blank" href="https://vk.com/ngbarnaul"><i class="icon-vk icon-size-m"></i></a>
@@ -670,7 +674,8 @@
                             <a target="_blank" href="https://ok.ru/ngbrn"><i class="icon-odnoklassniki icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i class="icon-facebook icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i
+                                    class="icon-facebook icon-size-m"></i></a>
                         </li>
                     </ul>
                 </div>
