--- a/psycholog.html
+++ b/psycholog.html
@@ -31,8 +31,8 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"><span
                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
             <div class="navbar-brand"><a href="/"><img src="images/logo025x.png"
-                                                                 srcset="images/logo05x.png 2x"
-                                                                 alt="NGBarnaul logo" class=""></a></div>
+                                                       srcset="images/logo05x.png 2x"
+                                                       alt="NGBarnaul logo" class=""></a></div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-center">
@@ -131,14 +131,18 @@
                 <div class="col-md-6">
                     <h2 class="mb-30">Кто проводит</h2>
                     <div class="text-center">
-                        <img class="img-circle" src="images/pastor-1.jpg" srcset="images/pastor-1-2x.jpg 2x" alt="pastor">
+                        <img class="img-circle" src="images/pastor-1.jpg" srcset="images/pastor-1-2x.jpg 2x"
+                             alt="pastor">
                         <h4>Артем Торопчин</h4>
-                        <p class="mb-30">Семейный психолог с 12 летним стажем консультирования семей. Дипломированный специалист. Счастливый семьянин.</p>
+                        <p class="mb-30">Семейный психолог с 12 летним стажем консультирования семей. Дипломированный
+                            специалист. Счастливый семьянин.</p>
                     </div>
                     <div class="text-center">
-                        <img height="175px" class="img-circle" src="images/s-anast.jpeg" srcset="images/s-anast.jpeg 2x" alt="oleg">
+                        <img height="175px" class="img-circle" src="images/s-anast.jpeg" srcset="images/s-anast.jpeg 2x"
+                             alt="oleg">
                         <h4>Анастасия Торопчина</h4>
-                        <p class="mb-50">Основатель женского клуба. Личный женский консультант. Опыт работы более 10 лет. Счастливая жена и мама.</p>
+                        <p class="mb-50">Основатель женского клуба. Личный женский консультант. Опыт работы более 10
+                            лет. Счастливая жена и мама.</p>
                     </div>
                 </div>
             </div>
@@ -153,11 +157,8 @@
                 <div class="col-md-5 col-md-push-7">
                     <img src="images/illustration-5.png" srcset="images/illustration-5@2x.png 2x" alt="illustration"
                          class="screen mb-50">
-                    <!--                    <h2 class="mb-50">5. Drop us a line</h2>-->
-                    <!--                    <p>The given template is armed with the number of settings, so you can easily adapt it according to-->
-                    <!--                        you requirements. Plenty of additional elements guarantee that you will get the project you-->
-                    <!--                        exactly wanted in the end, saving you time and money.-->
-                    <!--                    </p>-->
+                    <h4><strong>Гарантируем конфиденциальность</strong></h4>
+                    <p>Соблюдается обязательство психолога хранить профессиональную тайну</p>
                 </div>
                 <div class="col-md-6 col-md-pull-5">
                     <div class="padding-box light" style="background-color:#fff">
@@ -185,7 +186,7 @@
             </div>
         </div>
         <div class="step-line-rtc step-line-half step-line-end"></div>
-<!--        <div class="step-line-ltc step-line-half step-line-end"></div>-->
+        <!--        <div class="step-line-ltc step-line-half step-line-end"></div>-->
         <div class="bg"></div>
     </section>
     <footer id="footer-list-form" class="dark pt-100 pb-100">
@@ -266,10 +267,12 @@
                 <div class="col-md-6 text-md-right">
                     <ul class="social-list">
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i class="icon-instagram icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i
+                                    class="icon-instagram icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i class="icon-youtube icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i
+                                    class="icon-youtube icon-size-m"></i></a>
                         </li>
                         <li>
                             <a target="_blank" href="https://vk.com/ngbarnaul"><i class="icon-vk icon-size-m"></i></a>
@@ -278,7 +281,8 @@
                             <a target="_blank" href="https://ok.ru/ngbrn"><i class="icon-odnoklassniki icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i class="icon-facebook icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i
+                                    class="icon-facebook icon-size-m"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -299,7 +303,8 @@
                 </div>
                 <div class="modal-body">
                     <h2 class="mb-30">Получить видеовыпуск<br>«Стоп развод»</h2>
-                    <p class="mb-30 fs-125">Введите свои данные и мы вышлем вам видеовыпуск авторской передачи Артёма Торопчина «Стоп развод». Это бесплатно!</p>
+                    <p class="mb-30 fs-125">Введите свои данные и мы вышлем вам видеовыпуск авторской передачи Артёма
+                        Торопчина «Стоп развод». Это бесплатно!</p>
                     <form action="./scripts/request.php" class="contact_form mb-0" id="popup-center-form-form"
                           novalidate="novalidate">
                         <div class="form-group">
